# jx2-paysys

./: .gitignore  BISHOP_REVERSE_ENGINEERING.md  CMakeLists.txt  COMPATIBILITY.md  DYNAMIC_USER_SUPPORT.md  IMPLEMENTATION_COMPARISON.md  INSTALL.md  JX1_ENHANCEMENTS.md  LOGIN_TIMEOUT_COMPREHENSIVE_FIX.md  LOGIN_TIMEOUT_FIX.md  Makefile  PAYLOAD_LOGGING_DOCUMENTATION.md  PROTOCOL.md  README.md  REVERSE_ENGINEERED_PAYSYS_README.md  REVERSE_ENGINEERING.md  build.sh  build_portable.sh  capture.pcap  character_management_schema.sql  clean.sh  client-linux  create_character.pcap  database_schema.sql  go.mod  help.sh  jx2_paysys.sql  package-lock.json  package.json  paysys-server-simple.js  paysys-server-unified.js  paysys-server.js  paysys.ini  pcap_analyzer.py  player-login.pcap  player_login.pcap  run.sh  start-server.sh  start.sh  test  (+10 more)
S3AccServer/: Sword3PaySys.dsp  Sword3PaySys.plg
S3AccServer/Debug/: Sword3PaySys.pch
S3AccServer/Release/: Sword3PaySys.map
bishop/: KG_BishopD  bishop.ini  bishop.ini1  start  verify_up2date_list.txt  verify_up2date_ver.ini
bishop/settings/: StringTable.txt
cmd/paysys/: main.go
cmd/test-bishop-processverifyreply-final/: main.go
cmd/test-bishop-protocol-fix/: main.go
cmd/test-bishop-timeout-final-fix/: main.go
cmd/test-bishop-timeout-fix/: main.go
cmd/test-bishop-timeout-validation/: main.go
cmd/test-dynamic-users/: main.go
paysys-win/: paysys.ini
src/: config_manager.cpp  config_manager.h  database_manager.cpp  database_manager.h  main.cpp  paysys_server.cpp  paysys_server.h  protocol_handler.cpp  protocol_handler.h
(+16 files in other folders)
